--- a/Thesis/Concept Suggestor.tex
+++ b/Thesis/Concept Suggestor.tex
@@ -21,10 +21,10 @@
 \maketitle
 
 \begin{abstract}
-This is the abstract.
+This is the abstract. Please write some more text here, I feel small and empty inside.
 \end{abstract}
 
-{\bf Keywords:} NLP, semantic relatedness, semantic similarity
+{\bf Keywords:} Natural Language Processing, semantic relatedness, semantic similarity
 
 \section{Introduction}
 
@@ -35,12 +35,14 @@ It is difficult for analysts from different domains to communicate about their p
 To reduce this difficulty, suggestions can be made to modelers during the modeling process to ensure that similar concepts are used throughout all models. These suggestions can either be taken from previously created models or from a taxonomy relevant to the domain. 
 It is important that any new concepts very similar to existing concepts in the models are not suggested. If "Airplane" is already modeled, "Aeroplane" should not be suggested as a new concept. For this, a system that compares new concepts to existing concepts and filters them based on similarity and synonymity can be used.
 
+In real life, concepts used in modeling are not always single words. Natural Language Processing (NLP) does not yet reliably support comparing multi-word concepts. The relationship between the words in multi-word concepts depends significantly on the context, something computers usually find hard to understand. In the ATM context, however, the relationship between two-word concepts is almost always identical. We propose a way to measure similarity between two-word concepts.
+
 \section{Related Work}
 
 Recommender systems are software tools and techniques providing suggestions for items to be of use to a user\cite{ricci2011introduction}. Recommender systems have become increasingly popular in recent years, and are utilized in a variety of areas including movies, music, news, books, research articles, search queries, social tags, and products in general. There are also recommender systems for experts, collaborators, jokes, restaurants, garments, financial services, life insurance, romantic partners, and Twitter pages. % TODO: Ensure this is not plagiarism from https://en.wikipedia.org/wiki/Recommender_system
 
 WordNet is an electronic lexical database\cite{kilgarriff2000wordnet}. % TODO: Add some more information on WordNet.
-SpaCy is one of the fastest and most accurate publicly available Natural Language Processing (NLP) toolkits available\cite{choi2015depends}.
+SpaCy is one of the fastest and most accurate publicly available NLP toolkits available\cite{choi2015depends}.
 SpaCy uses GloVe to create word vectors. GloVe is an unsupervised learning algorithm for obtaining vector representations for words. Training is performed on aggregated global word-word co-occurrence statistics from a corpus\cite{pennington2014glove}. Although GloVe measures co-occurrence and not semantic similarity or relatedness, its results can be used as a rough estimate of semantic similarity or relatedness\cite{levy2015improving}. SpaCy's default word vector library is trained on the Common Crawl corpus. The Common Crawl corpus contains over 2.96 billion web pages and over 250 TiB of uncompressed content as of June 2017\cite{nagel2017commoncrawl}.
 
 Most methods of computing semantic relatedness measures such as word vectors rely on training an algorithm on a dataset. Public datasets, such as Google, Wikipedia, or WordNet are often used, although private datasets can also be used to improve context-sensitivity. Wikipedia and WordNet have proven to perform well in a variety of situations\cite{strube2006wikirelate}. % This section lacks a clear structure. TODO: add clear structure. Add a paragraph that talks about NLP in general, its application areas, etc. I can add more methods/tools, also try to group the data sets. I need to mention word2vec algorithms as a baseline. NLTK is missing. When I cite a work, explain why it is relevant, what the advantages and limitations are of using it.
