--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -2,6 +2,17 @@
 ## Definitely relevant ##
 #########################
 
+@article{chowdhury2003natural,
+  title={Natural language processing},
+  author={Chowdhury, Gobinda G},
+  journal={Annual review of information science and technology},
+  volume={37},
+  number={1},
+  pages={51--89},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+
 @inproceedings{pennington2014glove,
   author = {Jeffrey Pennington and Richard Socher and Christopher D. Manning},
   booktitle = {Empirical Methods in Natural Language Processing (EMNLP)},
